[package]
name = "spektar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
cpal = "0.15.3"
eframe = "0.31.0"
egui = "0.31.0"
rodio = "0.20.1"
spectrum-analyzer = "1.6.0"
winit = "0.30.9"
libpulse-binding = "2.28.1"
libpulse-simple-binding = "2.28.1"
